--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-span{
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    border: 1px solid red;
-    border-radius: 50%;
-    line-height: 100px;
+
+
+div.wrapper{
+    height: 100vh;
 }
